--- a/assets/base.css
+++ b/assets/base.css
@@ -101,12 +101,6 @@ body:has(.section-header .drawer-menu) .announcement-bar-section .page-width {
 }
 
 @media screen and (min-width: 768px) {
-  .header.page-width,
-  .utility-bar__grid.page-width {
-    padding-left: 3.2rem;
-    padding-right: 3.2rem;
-  }
-
   .page-width--narrow {
     padding: 0 9rem;
   }
@@ -121,11 +115,6 @@ body:has(.section-header .drawer-menu) .announcement-bar-section .page-width {
 }
 
 @media screen and (min-width: 992px) {
-  .header:not(.drawer-menu).page-width {
-    padding-left: 5rem;
-    padding-right: 5rem;
-  }
-
   .page-width--narrow {
     max-width: 72.6rem;
     padding: 0;
@@ -1380,43 +1369,6 @@ details[open] > .share-button__fallback {
   border: 0;
 }
 
-.field:before,
-.select:before,
-.customer .field:before,
-.customer select:before,
-.localization-form__select:before {
-  pointer-events: none;
-  content: '';
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  border-radius: var(--inputs-radius-outset);
-  box-shadow: var(--inputs-shadow-horizontal-offset) var(--inputs-shadow-vertical-offset)
-    var(--inputs-shadow-blur-radius) rgba(var(--color-shadow), var(--inputs-shadow-opacity));
-  z-index: -1;
-}
-
-.field:after,
-.select:after,
-.customer .field:after,
-.customer select:after,
-.localization-form__select:after {
-  pointer-events: none;
-  content: '';
-  position: absolute;
-  top: var(--inputs-border-width);
-  right: var(--inputs-border-width);
-  bottom: var(--inputs-border-width);
-  left: var(--inputs-border-width);
-  border: 0.1rem solid transparent;
-  border-radius: var(--inputs-radius);
-  box-shadow: 0 0 0 var(--inputs-border-width) rgba(var(--color-foreground), var(--inputs-border-opacity));
-  transition: box-shadow var(--duration-short) ease;
-  z-index: 1;
-}
-
 .select__select {
   font-family: var(--font-body-family);
   font-style: var(--font-body-style);
@@ -1431,8 +1383,7 @@ details[open] > .share-button__fallback {
 .customer .field:hover.field:after,
 .customer select:hover.select:after,
 .localization-form__select:hover.localization-form__select:after {
-  box-shadow: 0 0 0 calc(0.1rem + var(--inputs-border-width))
-    rgba(var(--color-foreground), var(--inputs-border-opacity));
+  box-shadow: 0px 4px 14px 0px #0000001F;
   outline: 0;
   border-radius: var(--inputs-radius);
 }
@@ -1442,7 +1393,7 @@ details[open] > .share-button__fallback {
 .customer .field input:focus-visible,
 .customer select:focus-visible,
 .localization-form__select:focus-visible.localization-form__select:after {
-  box-shadow: 0 0 0 calc(0.1rem + var(--inputs-border-width)) rgba(var(--color-foreground));
+  box-shadow: 0px 4px 14px 0px #0000001F;
   outline: 0;
   border-radius: var(--inputs-radius);
 }
@@ -1452,10 +1403,21 @@ details[open] > .share-button__fallback {
 .customer .field input:focus,
 .customer select:focus,
 .localization-form__select:focus.localization-form__select:after {
-  box-shadow: 0 0 0 calc(0.1rem + var(--inputs-border-width)) rgba(var(--color-foreground));
+  box-shadow: 0px 4px 14px 0px #0000001F;
   outline: 0;
   border-radius: var(--inputs-radius);
 }
+
+.field__input:hover,
+.select__select:hover,
+.customer .field input:hover,
+.customer select:hover,
+.localization-form__select:hover.localization-form__select:after {
+  box-shadow: 0px 4px 14px 0px #0000001F;
+  outline: 0;
+  border-radius: var(--inputs-radius);
+}
+
 
 .localization-form__select:focus {
   outline: 0;
@@ -2119,12 +2081,22 @@ input[type='checkbox'] {
 }
 
 .header {
-  display: grid;
-  grid-template-areas: 'left-icons heading icons';
-  grid-template-columns: 1fr 2fr 1fr;
+  display: flex;
   align-items: center;
 }
 
+.header .header-left {
+  width: 80%;
+  display: flex;
+  align-items: center;
+  gap: 24px;
+}
+@media screen and (min-width: 1200px)  {
+  .header .header-left {
+    width: 70%;
+    gap: 32px;
+  }
+}
 @media screen and (max-width: 767.98px) {
   .header--has-app {
     grid-template-columns: auto 1fr auto;
@@ -2190,6 +2162,7 @@ input[type='checkbox'] {
 .header__heading {
   margin: 0;
   line-height: 0;
+  width: 20%;
 }
 
 .header > .header__heading-link {
@@ -2204,7 +2177,7 @@ input[type='checkbox'] {
 
 .header__heading-link {
   display: inline-block;
-  padding: 0.75rem;
+  padding: 0rem;
   text-decoration: none;
   word-break: break-word;
 }
@@ -2276,8 +2249,13 @@ input[type='checkbox'] {
   grid-area: icons;
   justify-self: end;
   padding-right: 0.8rem;
+  width: 20%;
 }
-
+@media screen and (min-width: 1200px) {
+  .header__icons {
+    width: 30%;
+  }  
+}
 .header__icons .shopify-app-block {
   max-width: 4.4rem;
   max-height: 4.4rem;
@@ -2451,10 +2429,6 @@ details[open] .modal-overlay::after {
   top: calc((var(--inputs-margin-offset) / 2));
 }
 
-.search-modal__form {
-  width: 100%;
-}
-
 .search-modal__close-button {
   position: absolute;
   right: 0.3rem;
@@ -2467,17 +2441,6 @@ details[open] .modal-overlay::after {
 
   .search-modal__content {
     padding: 0 6rem;
-  }
-}
-
-@media screen and (min-width: 992px) {
-  .search-modal__form {
-    max-width: 74.2rem;
-  }
-
-  .search-modal__close-button {
-    position: initial;
-    margin-left: 0.5rem;
   }
 }
 
@@ -2540,6 +2503,7 @@ details[open] > .header__submenu {
 @media screen and (min-width: 992px) {
   .header__inline-menu {
     display: block;
+    width: 30%;
   }
 
   .header--top-center .header__inline-menu {
