--- a/assets/component-predictive-search.css
+++ b/assets/component-predictive-search.css
@@ -3,15 +3,11 @@
   position: absolute;
   top: calc(100% + 0.1rem);
   left: -0.1rem;
-  border-width: var(--popup-border-width);
-  border-style: solid;
-  border-color: rgba(var(--color-foreground), var(--popup-border-opacity));
-  background-color: rgb(var(--color-background));
+  border: 1px solid #E3E3E3;
+  border-radius: 8px;
+  background-color: #fff;
   z-index: 3;
-  border-bottom-right-radius: var(--popup-corner-radius);
-  border-bottom-left-radius: var(--popup-corner-radius);
-  box-shadow: var(--popup-shadow-horizontal-offset) var(--popup-shadow-vertical-offset) var(--popup-shadow-blur-radius)
-    rgba(var(--color-shadow), var(--popup-shadow-opacity));
+  box-shadow: 0px 4px 14px 0px #0000001F;
   overflow-y: auto;
   -webkit-overflow-scrolling: touch;
 }
@@ -23,7 +19,7 @@
 
 .predictive-search__results-groups-wrapper {
   display: flex;
-  border-bottom: 0.1rem solid rgba(var(--color-foreground), 0.08);
+  flex-direction: column;
   padding-bottom: 1rem;
 }
 
@@ -54,6 +50,7 @@
 
   .header predictive-search {
     position: relative;
+    width: 50%;
   }
 }
 
@@ -81,9 +78,9 @@ predictive-search[loading] .predictive-search {
   .predictive-search__result-group:first-child .predictive-search__pages-wrapper {
     display: initial;
   }
-  .predictive-search__result-group:first-child {
+  /* .predictive-search__result-group:first-child {
     flex: 0 0 26.4rem;
-  }
+  } */
   .predictive-search__results-groups-wrapper--no-products .predictive-search__result-group:first-child,
   .predictive-search__result-group:only-child {
     flex-grow: 1;
@@ -142,7 +139,7 @@ predictive-search[loading] .predictive-search__results-groups-wrapper ~ .predict
 
 .predictive-search__item {
   display: flex;
-  padding: 1rem 2rem;
+  padding: 0.5rem 2rem;
   text-align: left;
   text-decoration: none;
   width: 100%;
@@ -171,10 +168,14 @@ predictive-search[loading] .predictive-search__results-groups-wrapper ~ .predict
 
 .predictive-search__item-heading {
   margin: 0;
+  font-weight: 500;
+  font-size: 14px;
+  color:#000000;
 }
 
 .predictive-search__item-query-result *:not(mark) {
   font-weight: bolder;
+  font-size: 14px;
 }
 
 .predictive-search__item-query-result mark {
